<resources>
    <string name="app_name">SignInUp</string>
    <string name="login">Log In</string>
    <string name="createAccount">Create Your \n Account</string>
    <string name="Yname"> Your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="joinus">Join Us</string>
    <string name="termsAndConditions">By Pressing \'Join Us\' You agree\n to our terms and conditions</string>
    <string name="sing_up">Sing Up</string>
</resources>