<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightwhite"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="end"
            android:textColor="@color/blackcolor"
            android:textSize="20sp"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/blackcolor"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:hint="@string/Yname"
            android:layout_marginTop="35dp"
            android:paddingLeft="15dp"
            android:inputType="text"
            android:textColorHint="@color/fullwhite"
            android:elevation="5dp"
            tools:ignore="Autofill,LabelFor,TextFields" />

    </LinearLayout>
</LinearLayout>