<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/lightwhite"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/goBackIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goback"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sing_up"
            android:gravity="end"
            android:textColor="@color/blackcolor"
            android:textSize="20sp"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/blackcolor"
            android:textSize="25sp"
            android:textStyle="bold"/>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/img">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_baseline_face_24"/>
        </LinearLayout>

        <EditText
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingStart="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/fullwhite"
            android:background="@drawable/btn"/>
        <EditText
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingStart="15dp"
            android:inputType="textPassword"
            android:textColor="@color/fullwhite"
            android:background="@drawable/btn"/>
        <Button
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@drawable/joinbtn"
            android:textColor="@color/whitecolor"/>
    </LinearLayout>
    

</LinearLayout>